--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,12 @@
     <parent>
         <groupId>com.github.drtrang</groupId>
         <artifactId>parent</artifactId>
-        <version>1.1.0</version>
+        <version>1.1.1</version>
     </parent>
 
+    <groupId>com.github.drtrang</groupId>
     <artifactId>druid-spring-boot-parent</artifactId>
-    <version>1.1.8-SNAPSHOT</version>
+    <version>1.1.8</version>
     <packaging>pom</packaging>
 
     <name>Druid Spring Boot Starter</name>
