--- a/druid-spring-boot/druid-spring-boot-starter/pom.xml
+++ b/druid-spring-boot/druid-spring-boot-starter/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.github.drtrang</groupId>
         <artifactId>druid-spring-boot</artifactId>
-        <version>1.1.8-SNAPSHOT</version>
+        <version>1.1.8</version>
     </parent>
 
     <artifactId>druid-spring-boot-starter</artifactId>
