--- a/druid-spring-boot-example/pom.xml
+++ b/druid-spring-boot-example/pom.xml
@@ -10,12 +10,12 @@
         <version>1.1.9</version>
     </parent>
 
-    <artifactId>druid-spring-boot2</artifactId>
+    <artifactId>druid-spring-boot2-example</artifactId>
     <packaging>pom</packaging>
 
     <modules>
-        <module>druid-spring-boot2-autoconfigure</module>
-        <module>druid-spring-boot2-starter</module>
+        <module>druid-spring-boot-mybatis-example</module>
+        <module>druid-spring-boot-jpa-example</module>
     </modules>
 
 </project>
