--- a/druid-spring-boot-example/druid-spring-boot-mybatis-example/pom.xml
+++ b/druid-spring-boot-example/druid-spring-boot-mybatis-example/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.github.drtrang</groupId>
         <artifactId>druid-spring-boot-example</artifactId>
-        <version>1.1.9.1</version>
+        <version>1.1.10-SNAPSHOT</version>
     </parent>
 
     <artifactId>druid-spring-boot-mybatis-example</artifactId>
