--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>com.github.drtrang</groupId>
         <artifactId>parent</artifactId>
-        <version>1.1.2</version>
+        <version>1.1.3</version>
     </parent>
 
     <groupId>com.github.drtrang</groupId>
     <artifactId>druid-spring-boot-parent</artifactId>
-    <version>1.1.9.1</version>
+    <version>1.1.10-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>druid-spring-boot-parent</name>
