--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>com.github.drtrang</groupId>
         <artifactId>parent</artifactId>
-        <version>1.1.3</version>
+        <version>1.2.2</version>
     </parent>
 
     <groupId>com.github.drtrang</groupId>
@@ -42,6 +42,7 @@
         <connection>scm:git:https://github.com/drtrang/druid-spring-boot.git</connection>
         <developerConnection>scm:git:git@github.com:drtrang/druid-spring-boot.git</developerConnection>
         <url>https://github.com/drtrang/druid-spring-boot</url>
+        <tag>HEAD</tag>
     </scm>
 
     <issueManagement>
@@ -54,10 +55,6 @@
         <module>druid-spring-boot-actuator</module>
         <module>druid-spring-boot-example</module>
     </modules>
-
-    <properties>
-        <druid.version>1.1.9</druid.version>
-    </properties>
 
     <dependencyManagement>
         <dependencies>
