--- a/druid-spring-boot/druid-spring-boot-autoconfigure/pom.xml
+++ b/druid-spring-boot/druid-spring-boot-autoconfigure/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.github.drtrang</groupId>
         <artifactId>druid-spring-boot</artifactId>
-        <version>1.1.10-SNAPSHOT</version>
+        <version>1.1.10</version>
     </parent>
 
     <artifactId>druid-spring-boot-autoconfigure</artifactId>
