--- a/druid-spring-boot-example/pom.xml
+++ b/druid-spring-boot-example/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.github.drtrang</groupId>
         <artifactId>druid-spring-boot-parent</artifactId>
-        <version>1.1.10</version>
+        <version>1.1.11-SNAPSHOT</version>
     </parent>
 
     <artifactId>druid-spring-boot-example</artifactId>
