--- a/druid-spring-boot/druid-spring-boot-autoconfigure/pom.xml
+++ b/druid-spring-boot/druid-spring-boot-autoconfigure/pom.xml
@@ -6,20 +6,16 @@
     <parent>
         <groupId>com.github.drtrang</groupId>
         <artifactId>druid-spring-boot2</artifactId>
-        <version>1.1.10</version>
+        <version>1.1.10.1</version>
     </parent>
 
     <artifactId>druid-spring-boot2-autoconfigure</artifactId>
 
     <dependencies>
+        <!-- required -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -35,15 +31,21 @@
             <artifactId>druid</artifactId>
             <optional>true</optional>
         </dependency>
+        <!-- optional -->
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <scope>provided</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
