--- a/druid-spring-boot-example/druid-spring-boot-jpa-example/pom.xml
+++ b/druid-spring-boot-example/druid-spring-boot-jpa-example/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.github.drtrang</groupId>
         <artifactId>druid-spring-boot2-example</artifactId>
-        <version>1.1.10.2</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>druid-spring-boot2-jpa-example</artifactId>
