--- a/druid-spring-boot/druid-spring-boot-autoconfigure/pom.xml
+++ b/druid-spring-boot/druid-spring-boot-autoconfigure/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.github.drtrang</groupId>
         <artifactId>druid-spring-boot2</artifactId>
-        <version>1.1.10.2</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>druid-spring-boot2-autoconfigure</artifactId>
