--- a/druid-spring-boot-example/druid-spring-boot-mybatis-example/src/main/resources/application.yml
+++ b/druid-spring-boot-example/druid-spring-boot-mybatis-example/src/main/resources/application.yml
@@ -29,7 +29,7 @@ spring:
     druid:
       max-wait: 30000
       query-timeout: 10
-      validation-query: SELECT 1
+      validation-query: SELECT 'x'
       use-global-data-source-stat: true
       # 默认开启，当前已开启
       stat:
